copy change and layout tweaks

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -12,6 +12,6 @@ export const yrsExp = new Date().getFullYear() - 2012
   path={props.pageContext.frontmatter.path}
 />
 
-<p>Hi there. I'm Jeff Winegar, a Frontend JavaScript Developer based out of LA. Originally a graphic designer for around 10 years, I transitioned into web development and have been making websites for the past {yrsExp} years.</p>
+<p>Hey there. I'm Jeff Winegar, a Frontend JavaScript Developer based out of LA. Originally a graphic designer for around 10 years, I transitioned into web development and have been making websites for the past {yrsExp} years.</p>
 
 I work with HTML, CSS, and JavaScript. Though always exploring new technologies, my focus right now has been on React.js, Gatsby, GraphQL, Node, and Express.
