--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -4,6 +4,7 @@ path: /
 ---
 
 import SEO from "../components/seo"
+import GithubRepos from "../components/githubRepos"
 
 export const yrsExp = new Date().getFullYear() - 2012
 
@@ -14,4 +15,11 @@ export const yrsExp = new Date().getFullYear() - 2012
 
 <p>Hey there. I'm Jeff Winegar, a Frontend JavaScript Developer based out of LA. Originally a graphic designer for around 10 years, I transitioned into web development and have been making websites for the past {yrsExp} years.</p>
 
-I work with HTML, CSS, and JavaScript. Though always exploring new technologies, my focus right now has been on React.js, Gatsby, GraphQL, Node, and Express.
+I work in HTML, CSS, and JavaScript. Though always exploring new technologies, my focus right now has been on React.js, Gatsby, GraphQL, Node, and Express.
+
+
+## Recent Projects
+
+<GithubRepos />
+
+View [my GitHub profile](https://github.com/jeffwinegar) to see more of my contributions.
