cleanup; style changes; copy changes; adds uses.mdx

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -3,8 +3,8 @@ title: Jeff Winegar - Frontend Developer
 path: /
 ---
 
-import SEO from "../components/seo"
-import GithubRepos from "../components/githubRepos"
+import SEO from "../components/SEO"
+import GithubRepos from "../components/GithubRepos"
 
 export const yrsExp = new Date().getFullYear() - 2012
 
@@ -13,13 +13,17 @@ export const yrsExp = new Date().getFullYear() - 2012
   path={props.pageContext.frontmatter.path}
 />
 
-<p>Hey there. I'm Jeff Winegar, a Frontend JavaScript Developer based out of LA. Originally a graphic designer for around 10 years, I transitioned into web development and have been making websites for the past {yrsExp} years.</p>
 
-I work in HTML, CSS, and JavaScript. Though always exploring new technologies, my focus right now has been on React.js, Gatsby, GraphQL, Node, and Express.
+# Hey, I'm Jeff Winegar.
 
+<p>I'm a Frontend JavaScript Developer based out of Los Angeles. Originally a graphic designer for 10 years, I transitioned into web development and have been building websites for the past {yrsExp} years. When not writing code I am also a <a href="https://www.instagram.com/jeff_winegar/">photographer</a>, an <a href="https://www.strava.com/athletes/1123257">avid bike commuter</a>, and a maker. I also really enjoy <a href="https://letterboxd.com/jeff_winegar/films/">movies</a>.</p>
 
-## Recent Projects
+I work in HTML, CSS, and JavaScript. Though always exploring new technologies, my focus right now is on React.js, Gatsby, GraphQL, Node, and Express. Take a look at a few of my public projects:
 
 <GithubRepos />
 
-View [my GitHub profile](https://github.com/jeffwinegar) to see more of my contributions.
+I am currently a Senior Web Developer at Wunderman Thompson where I do hands-on development and lead a team working for clients including Hyundai, Genesis, Shell, Pennzoil, Quaker State, Hulu, CareCredit, SCAN, and The University of California, Irvine in projects that span from micro-sites, landing pages, and site components to responsive dynamic data-driven emails and animated banner ads.
+
+If you'd like to see more of my contributions, take a look on [my GitHub profile](https://github.com/jeffwinegar). You can also see my work history on [LinkedIn](https://www.linkedin.com/in/jeffwinegar), or get in touch with me directly at [jeff@jeffwinegar.com](mailto:jeff@jeffwinegar.com).
+
+👋 Thanks for visiting.
