updates uses.mdx to be a blog post

--- a/src/posts/Uses/uses.mdx
+++ b/src/posts/Uses/uses.mdx
@@ -1,16 +1,12 @@
 ---
-title: Uses - Jeff Winegar
-path: /uses
+title: 🤓 Uses
+slug: uses
+image:
+category:
+- Other
+date: 2020-10-01
 ---
 
-import SEO from "../components/SEO"
-
-<SEO
-  title={props.pageContext.frontmatter.title}
-  path={props.pageContext.frontmatter.path}
-/>
-
-# 🤓 Uses
 
 I wanted to be like the cool kids so, even though no one has asked me what my setup is, I thought I'd add it here in case anyone is curious.
 
