--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -16,7 +16,7 @@ export const yrsExp = new Date().getFullYear() - 2012
 
 # Hey, I'm Jeff Winegar.
 
-<p>I'm a Frontend JavaScript Developer based out of Los Angeles. Originally a graphic designer for 10 years, I transitioned into web development and have been building websites for the past {yrsExp} years. When not writing code I am also a <a href="https://www.instagram.com/jeff_winegar/">photographer</a>; an <a href="https://www.strava.com/athletes/1123257">avid bike commuter</a>; and a maker. I also really enjoy music and <a href="https://letterboxd.com/jeff_winegar/films/">movies</a>.</p>
+<p>I'm a Frontend JavaScript Developer based out of Los Angeles. Originally a graphic designer for 10 years, I transitioned into web development and have been building websites for the past {yrsExp} years. When not writing code I am also an <a href="https://www.strava.com/athletes/1123257">avid bike commuter</a>; a <a href="https://www.instagram.com/jeff_winegar/">photographer</a>; and a maker. I also really enjoy music and <a href="https://letterboxd.com/jeff_winegar/films/">movies</a>.</p>
 
 I work in HTML, CSS, and JavaScript. Though always exploring new technologies, my focus right now is on React.js, Gatsby, GraphQL, Node, and Express. Take a look at a few of my public projects:
 
