--- a/src/posts/Uses/uses.mdx
+++ b/src/posts/Uses/uses.mdx
@@ -4,7 +4,7 @@ slug: uses
 image:
 category:
 - Other
-date: 2020-10-01
+date: 2020-09-21
 ---
 
 
@@ -31,9 +31,17 @@ I wanted to be like the cool kids so, even though no one has asked me what my se
 ## Desktop Apps
 
 - [Google Chrome](https://www.google.com/chrome/)
+- Adobe Creative Cloud (Photoshop, Illustrator, XD, After Effects)
+- [CyberDuck](https://cyberduck.io/)
+- [Rectangle](https://github.com/rxhanson/Rectangle)
+- [Itsycal](https://www.mowglii.com/itsycal/)
+- [NightOwl](https://nightowl.kramser.xyz/)
+- [SkyFonts](https://www.fonts.com/web-fonts/google)
+
 
 ## Chrome Extentions
 
+- [GoFullPage - Full Page Screen Capture](https://chrome.google.com/webstore/detail/gofullpage-full-page-scre/fdpohaocaechififmbbbbbknoalclacl)
 - [The Great Suspender](https://chrome.google.com/webstore/detail/the-great-suspender/klbibkeccnjlkjkiokjodocebajanakg)
 - [React Developer Tools](https://chrome.google.com/webstore/detail/react-developer-tools/fmkadmapgofadopljbjfkapdkoienihi)
 - [axe - Web Accessibility Testing](https://chrome.google.com/webstore/detail/axe-web-accessibility-tes/lhdoppojpmngadmnindnejefpokejbdd)
@@ -42,14 +50,17 @@ I wanted to be like the cool kids so, even though no one has asked me what my se
 
 ## Desk Setup
 
-- Monitor
-- Monitor Stand
-- Laptop
-- Laptop Stand
-- Desk
-- Rolling file cabinet
+- [LG 27UL600-W 27" IPS LED 4K UHD FreeSync Monitor with HDR](https://www.bestbuy.com/site/lg-27ul600-w-27-ips-led-4k-uhd-freesync-monitor-with-hdr-silver-white/6329956.p?skuId=6329956)
+- [VIVO Dual LCD Monitor Desk Mount Stand](https://www.amazon.com/dp/B009S750LA) using one arm, modified to extend one section longer to reach a little further, drill mounted to the left side of my desk.
+- [Roost Laptop Stand](https://www.amazon.com/dp/B01C9KG8IG)
+- [IKEA ALEX Desk](https://www.ikea.com/us/en/p/alex-desk-white-40260717/)
+- [Pemberly Row 3-Drawer Mobile File Cabinet](https://www.target.com/p/pemberly-row-3-drawer-mobile-file-cabinet-with-anti-tilt-in-white/-/A-79363551)
+- MacBook Pro (15-inch, 2018) 2.2 GHz 6-Core Intel Core i7 with 16 GB RAM and 256 GB SSD Storage. _(work provided)_
+- Apple Magic Keyboard
+- Apple Magic Mouse 2
 
 ## Other Gear
 
-- Backpack
-- Headphones
+- [Road Runner Bags - Medium Roll Top Backpack](https://roadrunnerbags.us/products/medium-roll-top) for the rare instance I might get caught in the rain on my commute.
+- [Carhartt Legacy Travel Kit](https://www.amazon.com/Carhartt-Legacy-Travel-Kit-Brown/dp/B00SV72EWQ) to keep all my cables and accessories in one place in my bag.
+- Apple AirPods Pro
