--- a/src/pages/404.mdx
+++ b/src/pages/404.mdx
@@ -1,3 +1,10 @@
-# NOT FOUND
+import {Link} from "gatsby"
+import SEO from "../components/SEO"
 
-You just hit a route that doesn&#39;t exist... the sadness.
+<SEO/>
+
+# 😵 Whoops
+
+404 NOT FOUND.
+
+You just hit a route that doesn&#39;t exist... the sadness. Let's head back to the <Link to="/">homepage</Link> and try again.
