--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,16 +1,9 @@
----
-title: Jeff Winegar - Frontend Developer
----
-
 import SEO from "../components/SEO"
 import GithubRepos from "../components/GithubRepos"
 
 export const yrsExp = new Date().getFullYear() - 2012
 
-<SEO
-  title={props.pageContext.frontmatter.title}
-  path={props.pageContext.frontmatter.path}
-/>
+<SEO/>
 
 
 # Hey, I'm Jeff Winegar.
