changed my mind

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -3,7 +3,7 @@ import GithubRepos from "../components/GithubRepos"
 
 export const yrsExp = new Date().getFullYear() - 2012
 
-<SEO/>
+<SEO title="Jeff Winegar - Frontend Developer" />
 
 
 # Hey, I'm Jeff Winegar.
