feat: update index copy

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -18,7 +18,7 @@ export const yrsExp = new Date().getFullYear() - 2012
   <a href="https://letterboxd.com/jeff_winegar/">movie</a>.
 </p>
 
-I work in HTML, CSS, and JavaScript. Though always exploring new technologies, my focus right now is on React.js, Gatsby, GraphQL, Node, and Express. Take a look at a few of my public projects:
+I work in HTML, CSS, and JavaScript. Though always exploring new technologies, my focus right now is on React.js, Gatsby, Next.js, GraphQL, Node, and Express. Take a look at a few of my public projects:
 
 <GithubRepos />
 
