feat: add new VS Code plugins being used

--- a/src/posts/Uses/uses.mdx
+++ b/src/posts/Uses/uses.mdx
@@ -3,10 +3,9 @@ title: 🤓 Uses
 slug: uses
 image:
 category:
-- Other
-date: 2020-09-21
+  - Other
+date: 2021-06-01
 ---
-
 
 I wanted to be like the cool kids so, even though no one has asked me what my setup is, I thought I'd add it here in case anyone is curious.
 
@@ -19,13 +18,16 @@ I wanted to be like the cool kids so, even though no one has asked me what my se
 - [Fira Code Retina](https://github.com/tonsky/FiraCode) typeface
 - [Apollo GraphQL](https://marketplace.visualstudio.com/items?itemName=apollographql.vscode-apollo)
 - [CSS Peek](https://marketplace.visualstudio.com/items?itemName=pranaygp.vscode-css-peek)
+- [ES7 React/Redux/GraphQL/React-Native snippets](https://marketplace.visualstudio.com/items?itemName=dsznajder.es7-react-js-snippets)
 - [GitLens](https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens)
+- [Highlight Matching Tag](https://marketplace.visualstudio.com/items?itemName=vincaslt.highlight-matching-tag)
 - [Import Cost](https://marketplace.visualstudio.com/items?itemName=wix.vscode-import-cost)
 - [Live Share](https://marketplace.visualstudio.com/items?itemName=MS-vsliveshare.vsliveshare)
 - [Material Icon Theme](https://marketplace.visualstudio.com/items?itemName=PKief.material-icon-theme)
 - [MDX](https://marketplace.visualstudio.com/items?itemName=silvenon.mdx)
 - [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode)
 - [Quokka.js](https://marketplace.visualstudio.com/items?itemName=WallabyJs.quokka-vscode)
+- [Todo Tree](https://marketplace.visualstudio.com/items?itemName=Gruntfuggly.todo-tree)
 - [vscode-styled-components](https://marketplace.visualstudio.com/items?itemName=jpoissonnier.vscode-styled-components)
 
 ## Desktop Apps
@@ -37,7 +39,6 @@ I wanted to be like the cool kids so, even though no one has asked me what my se
 - [Itsycal](https://www.mowglii.com/itsycal/)
 - [NightOwl](https://nightowl.kramser.xyz/)
 - [SkyFonts](https://www.fonts.com/web-fonts/google)
-
 
 ## Chrome Extentions
 
