feat: add blog posts listing

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,5 +1,6 @@
 import SEO from "../components/SEO"
 import GithubRepos from "../components/GithubRepos"
+import PostsListing from "../components/PostsListing"
 
 export const yrsExp = new Date().getFullYear() - 2012
 
@@ -27,3 +28,13 @@ I am currently a Senior Web Developer at Wunderman Thompson where I do hands-on 
 If you'd like to see more of my contributions, take a look on [my GitHub profile](https://github.com/jeffwinegar). You can also see my work history on [LinkedIn](https://www.linkedin.com/in/jeffwinegar), or get in touch with me directly at [jeff@jeffwinegar.com](mailto:jeff@jeffwinegar.com).
 
 👋 Thanks for visiting.
+
+: :
+
+## 🤔...some thoughts
+
+This space is for me to post about what I like and am interested in while trying not to worry about it being perfect. The entries may not be complete thoughts, I may circle back to them, I may not, we'll see how things go? 🤷
+
+If you like something you read here, please feel free to share it and let me know. It's always nice to get feedback.
+
+<PostsListing />
