feat: update uses page with new styled-components extension link

--- a/src/posts/uses/index.mdx
+++ b/src/posts/uses/index.mdx
@@ -28,7 +28,7 @@ I wanted to be like the cool kids so, even though no one has asked me what my se
 * [MDX](https://marketplace.visualstudio.com/items?itemName=silvenon.mdx)
 * [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode)
 * [Quokka.js](https://marketplace.visualstudio.com/items?itemName=WallabyJs.quokka-vscode)
-* [vscode-styled-components](https://marketplace.visualstudio.com/items?itemName=jpoissonnier.vscode-styled-components)
+* [vscode-styled-components](https://marketplace.visualstudio.com/items?itemName=styled-components.vscode-styled-components)
 
 ## Chrome Extensions
 
