feat: add apple music link

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -15,8 +15,9 @@ export const yrsExp = new Date().getFullYear() - 2012
   also an{" "}
   <a href="https://www.strava.com/athletes/jeff_winegar">avid bike commuter</a>;
   a <a href="https://www.instagram.com/jeff_winegar/">photographer</a>; and a
-  maker. I also really enjoy music and watching a good{" "}
-  <a href="https://letterboxd.com/jeff_winegar/">movie</a>.
+  maker. I also really enjoy{" "}
+  <a href="https://music.apple.com/profile/jeff_winegar">music</a> and watching
+  a good <a href="https://letterboxd.com/jeff_winegar/">movie</a>.
 </p>
 
 I work in HTML, CSS, and JavaScript. Though always exploring new technologies, my focus right now is on React.js, Gatsby, Next.js, GraphQL, Node, and Express. Take a look at a few of my public projects:
