feat: add Callout component

--- a/src/posts/setting-up-my-m1-mac-for-development/index.mdx
+++ b/src/posts/setting-up-my-m1-mac-for-development/index.mdx
@@ -7,7 +7,11 @@ category:
 date: 2021-12-10
 ---
 
-> It's hard to remember all the things you need to do to set up a proper development environment so I am mainly writing this for my own reference (you're welcome future me).
+<Callout>
+
+It's hard to remember all the things you need to do to set up a proper development environment so I am mainly writing this for my own reference (you're welcome future me).
+
+</Callout>
 
 Getting a new computer is exciting—until you start setting it up—then all the questions and anxiety kick in. This feeling was increased upon getting my new Macbook Pro M1 Max. I didn't even consider that despite Apple's M1 chip being out for about a year, some things still haven't been updated to support it yet. I wanted to make sure I got all the Apple Silicon versions for everything I could. For this I've been using [Does It ARM?](https://doesitarm.com/) to see what has been ported to Apple Silicon, runs using Rosetta, or doesn't work yet.
 
