--- a/src/posts/uses/index.mdx
+++ b/src/posts/uses/index.mdx
@@ -8,7 +8,11 @@ date: 2021-11-15
 
 I wanted to be like the cool kids so, even though no one has asked me what my setup is, I thought I'd add it here in case anyone is curious.
 
-> No links provided here are affiliate links or have any partnership associated with them.
+<Callout>
+
+No links provided here are affiliate links or have any partnership associated with them.
+
+</Callout>
 
 ## Editor & Extensions
 
